# ZorakAudio-Experimental-Plugins

./: LICENSE  README.md  dsp_jsfx_aot.py  plugins.json
.ci/: reaper_ci_unblock.ahk
.github/workflows/: dsp-jsfx-nulltest.yml  release.yml
ATTACK/: ATTACK.jsfx  README.md
BedRock/: README.md
Click-Be-Gone (SG)/: Click-Be-Gone (SG).dsp
Designed Distance Topology (DDT)/: DDT Null Test.rpp  DDT.jsfx  README.md
Designed Panning Topology (DPT)/: DPT.dsp  DPT.jsfx  README.md
DummyJSFX/: DummyJSFX.jsfx  JSFX Null Test Template.rpp
ERB Tilt/: ERB Tilt.jsfx  README.md
EasyExpander/: EasyExpander.jsfx  README.md
Gaussian Transient Shaper (GTS)/: Gaussian Transient Shaper (GTS).dsp
GesturePad/: GPad.jsfx  README.md
Hyperreal 3D Panner/: 3DPanner.jsfx  README.md
ModTilt/: ModTilt.dsp  README.md
Reverb Expanding Downwards (RED)/: Reverb Expanding Downwards (RED).dsp
Reverb Tail Tamer/: README.md
Roomalizer/: README.md
Salience Push/: SP.jsfx
Spectral Stabilizer/: README.md  Spectral Stabilizer.jsfx
Temporal Structural EQ (TSEQ)/: README.md  TSEQ.jsfx
Texture/: Texture.jsfx
Vocal Air Recovery (VAR)/: CHANGE.md  README.md  Vocal Air Recovery (VAR).dsp
cmake/plugin/: CMakeLists.txt
docs/: DSP-JSFX-Communication.md  DSP-JSFX-SamplePool.md  FileImportRecipes.md
plugins/: README.md
plugins/Ambience/: README.md
plugins/Ambience/ADS/: README.md  plugin.json
plugins/Ambience/ADS/src/: ADS.jsfx
plugins/Control/: README.md
plugins/Control/GesturePad/: README.md  plugin.json
plugins/Control/IPCProbeA/: README.md  plugin.json
plugins/Control/IPCProbeA/src/: IPCProbeA.jsfx
plugins/Control/IPCProbeB/: README.md  plugin.json
plugins/Control/NeuroCV/: README.md  plugin.json
plugins/Control/NeuroCV/src/: NeuroCV.jsfx
plugins/Dynamics/: README.md
plugins/Dynamics/ATTACK/: README.md  plugin.json
plugins/Dynamics/EasyExpander/: README.md  plugin.json
plugins/Dynamics/GTS/: README.md  plugin.json
plugins/Dynamics/ModTilt/: README.md  plugin.json
plugins/Dynamics/ModTilt/src/: ModTilt.dsp
plugins/Dynamics/RED/: README.md  plugin.json
plugins/Dynamics/RED/src/: Reverb Expanding Downwards (RED).dsp
plugins/Dynamics/RTT/: README.md  plugin.json
plugins/Dynamics/RTT/src/: Reverb Tail Tamer.jsfx
plugins/Dynamics/SOMA/: README.md  plugin.json
plugins/Dynamics/SOMA/src/: SOMA.jsfx
plugins/Restoration/: README.md
plugins/Restoration/ClickBeGoneSG/: README.md  plugin.json
plugins/Restoration/VAR/: README.md  plugin.json
plugins/Spatialization/: README.md
plugins/Spatialization/3DPanner/: README.md  plugin.json
plugins/Spatialization/3DPanner/src/: 3DPanner.jsfx
plugins/Spatialization/3DPannerManager/src/: 3DPannerManager.jsfx
plugins/Spatialization/DDT/: README.md  plugin.json
plugins/Spatialization/DOT/: README.md  plugin.json
plugins/Spatialization/DOT/src/: DOT.jsfx
plugins/Spatialization/DPT/: README.md  plugin.json
plugins/Spatialization/PsychoConvolver/: README.md  plugin.json
plugins/Spatialization/PsychoConvolver/src/: PsychoConvolver.jsfx
plugins/Spatialization/Roomalizer/: README.md  plugin.json
plugins/Spatialization/Roomalizer/src/: Roomalizer.jsfx
plugins/Spatialization/SaliencePush/: README.md  plugin.json
plugins/Spectral/: README.md
plugins/Spectral/Alias/: README.md  plugin.json
plugins/Spectral/Alias/src/: Alias.jsfx
plugins/Spectral/BedRock/: README.md  plugin.json
plugins/Spectral/BedRock/src/: BedRock.jsfx
plugins/Spectral/CMD/: README.md  plugin.json
plugins/Spectral/CMD/src/: CrossMixDeclutter.jsfx
plugins/Spectral/Contour/: README.md  plugin.json
plugins/Spectral/Contour/src/: Contour.jsfx
plugins/Spectral/ERBTilt/: README.md  plugin.json
plugins/Spectral/Sample/: README.md  plugin.json
plugins/Spectral/Sample/src/: Sample.jsfx
plugins/Spectral/SpectralStabilizer/: README.md  plugin.json
plugins/Spectral/TSEQ/: README.md  plugin.json
plugins/Spectral/TSEQ/src/: TSEQ.jsfx
plugins/Spectral/Texture/: README.md  plugin.json
plugins/Spectral/Texture/src/: Texture.jsfx
plugins/Spectral/TextureXY/: README.md  plugin.json
plugins/Spectral/TextureXY/src/: TextureXY.jsfx
scripts/: build.py  check_unicode_literals.py  new_plugin.py  pluginlib.py  run_dsp-jsfx_commtests.py  run_dsp-jsfx_nulltests.py  run_dsp-jsfx_sample_pool_tests.py
src/: DspJsfxGmem.cpp  DspJsfxGmem.h  DspJsfxMessageBus.cpp  DspJsfxMessageBus.h  DspJsfxRuntime.cpp  DspJsfxRuntime.h  DspJsfxRuntimeBuiltins.cpp  DspJsfxSamplePool.cpp  DspJsfxSamplePool.h  DspJsfxSharedMemory.cpp  DspJsfxSharedMemory.h  FaustJuceProcessor.cpp  JSFXCorrectnessCheck.h  JSFXJuceProcessor.cpp  NSEELHostStubs.cpp  PluginMarkdownHelp.h  YSFXGfxCommCompat.h  YSFXGfxInterpreter.h  ZAAudioImportRecipe.h  ZAUnicodeText.h  faust_support_min.h
src/WDL/eel2/: eel_import.h  glue_port.h  ns-eel-int.h  ns-eel.h  nseel-compiler.c  nseel-ram.c
tests/dsp-jsfx-comm/: gmem_reader.jsfx  gmem_writer.jsfx  invalid_gmem_put_sample.jsfx  invalid_msg_sample.jsfx  receiver.jsfx  sender.jsfx
tests/dsp-jsfx-sample-pool/: invalid_export_sample.jsfx  sample_pool_probe.jsfx
